fix: align texts

--- a/codeflix/styles/banner.css
+++ b/codeflix/styles/banner.css
@@ -2,6 +2,9 @@
   height: 75vh;
   text-align: center;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .banner .banner__content {
   position: relative;
